--- a/templates/config.erb
+++ b/templates/config.erb
@@ -1,3 +1,3 @@
 Host <%= @mon_initial_members %>
-        Hostname <%= @mon_host %>
+        Hostname <%= @ceph_monitor_address %>
         User <%= @ceph_deploy_user %>
