--- a/templates/ceph.conf.erb
+++ b/templates/ceph.conf.erb
@@ -5,3 +5,5 @@ mon host = <%= @ceph_monitor_address %>
 auth supported = cephx
 osd journal size = 1024
 filestore xattr use omap = true
+public network = <%= @ceph_public_network %>
+cluster network = <%= @ceph_cluster_network %>
