--- a/templates/95-ceph-osd.rules.erb
+++ b/templates/95-ceph-osd.rules.erb
@@ -1,4 +1,4 @@
-﻿# Check gpt partion for ceph tags and activate
+# Check gpt partion for ceph tags and activate
 ACTION=="add", SUBSYSTEM=="block", \
   ENV{DEVTYPE}=="partition", \
   ENV{ID_PART_TABLE_TYPE}=="gpt", \
