--- a/templates/secret.xml-compute.erb
+++ b/templates/secret.xml-compute.erb
@@ -1,6 +1,6 @@
 <secret ephemeral='no' private='no'>
   <usage type='ceph'>
-    <name>client.admin secret</name>
+    <name>client.<%= @cinder_rbd_user %> secret</name>
   </usage>
   <uuid><%= @ceph_monitor_fsid %></uuid>
 </secret>
